public/css/style.css
.ml-n1 { margin-left: -0.25rem !important; }
.ml-n2 { margin-left: -0.5rem !important; }
.ml-n3 { margin-left: -1rem !important; }
.ml-n4 { margin-left: -1.5rem !important; }
.ml-n5 { margin-left: -3rem !important; }
.mb-6 { margin-bottom: 5rem !important;}

.zoom {
    animation: zoomIn 0.2s;
    -moz-animation: zoomIn 0.2s; /* Firefox */
    -webkit-animation: zoomIn 0.2s; /* Safari and Chrome */
    -o-animation: zoomIn 0.2s; /* Opera */
}

@keyframes zoomIn {
    from { scale:0; }
    to { scale:1; }
}
@-moz-keyframes zoomIn { /* Firefox */
    from { scale:0; }
    to { scale:1; }
}
@-webkit-keyframes zoomIn { /* Safari and Chrome */
    from { scale:0; }
    to { scale:1; }
}
@-o-keyframes zoomIn { /* Opera */
    from { scale:0; }
    to { scale: 1; }
}


#searchbar {
    width: 35%;
}



#simpleEditor button {
    border: 1px solid gainsboro;
}

.card-title {
    font-size: inherit; 
}

.note {
    --large-width: 20rem;
    --medium-width: 18rem;
    --small-width: 14rem;
    --large-height: 10rem;
    --medium-height: 7rem;
    --small-height: 4rem;
    
    margin: 5px;
}


textarea {
    resize: none;
}


.card-tag {
    width: fit-content; 
    height: 24px; 
    font-size: 12px;
    background: #e9ecef;
}

.bg-light-dark {
    background: #e9ecef;
}

.color-picker {
    background-color: grey;
}

.squaregrid {
    width: 250px;
    height: 250px;
    margin: 20px;
    display: grid;
    grid-template: repeat(5, 1fr) / repeat(5, 1fr);
    grid-gap: 10px;
}

.cell {
    font-size: 1em;
}


.modal-body .tab-content{
    height: 50vh;
    width: 50vh;
}

.sidebar {
    width: 230px;
    height: 100vh;
    position: fixed;
    margin-left: -300px;
    background-color: #7952b3;
    transition: 0.4s;
}
.active-nav {
    margin-left: 0;
}

.nav-btn {
    color: #fff;
}

.nav-btn:hover {
    -moz-box-shadow: inset 0 0 100px 100px rgba(0, 0, 0, 0.3);
    -webkit-box-shadow: inset 0 0 100px 100px rgba(0, 0, 0, 0.3);
    box-shadow: inset 0 0 100px 100px rgba(0, 0, 0, 0.3);
}

.active-cont {
    margin-left: 300px;
}

.main-container {
    transition: 0.2s;
}

.tag-btn {
    height: 50px;
    border-radius: 35px;
    margin-right: 50px;
}

.tag-btn:hover {
    -moz-box-shadow: inset 0 0 100px 100px rgba(0, 0, 0, 0.1);
    -webkit-box-shadow: inset 0 0 100px 100px rgba(0, 0, 0, 0.1);
    box-shadow: inset 0 0 100px 100px rgba(0, 0, 0, 0.1);
}

